2007-01-21  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: reworded Monitor Resolution
	section as suggested in bug #398851.

2007-01-21  Raphaël Quinet  <raphael@gimp.org>

	* app/display/gimpstatusbar.[ch]
	* app/tools/gimptool.[ch]: add optional help text at the end of
	the messages generated by gimp_statusbar_push_coords() and
	gimp_statusbar_push_length().

	* app/tools/gimpcolortool.c
	* app/tools/gimpeditselectiontool.c 
	* app/tools/gimpmovetool.c
	* app/tools/gimprectangletool.c: use the updated functions.

	* app/tools/gimpblendtool.c
	* app/tools/gimpcolorpickertool.c: added status bar messages.

2007-01-20  Raphaël Quinet  <raphael@gimp.org>

	* app/tools/gimppainttool.c (gimp_paint_tool_control): pop the
	status bar message when the tool is halted.  This fixes a bug that
	was leaving messages in the status bar if the mouse pointer was in
	the image and the user switched to another tool with the keyboard.

2007-01-20  Michael Natterer  <mitch@gimp.org>

	Close the display after "Save as" when invoked via the "Close
	Without Saving" dialog. Fixes bug #383700.

	* app/actions/actions-types.h: added enum GimpSaveMode { SAVE,
	SAVE_AS, SAVE_A_COPY, SAVE_AND_CLOSE }.

	* app/actions/file-actions.c: changed the 4 save actions into
	GimpEnumActions with above enum as values.

	* app/actions/file-commands.[ch]: merged the save callbacks into
	one and pass a "close_after_saving" boolean to
	file_save_dialog_show().

	* app/widgets/gimpfiledialog.[ch]: added "gboolean
	close_after_saving" parameter to gimp_file_dialog_set_image() and
	to the GimpFileDialog struct.

	* app/dialogs/file-save-dialog.c: if the file was saved
	successfully and close_after_saving is TRUE, close the display if
	the image has not become dirty again in the meantime.

2007-01-20  Sven Neumann  <sven@gimp.org>

	* HACKING: removed obsolete paragraph about authorsgen.

2007-01-20  Mukund Sivaraman <muks@mukund.org>
